@@ -18,7 +18,7 @@
  OmegaT 6.0.1 (2024-08-17)
 ----------------------------------------------------------------------
   0 Enhancement
- 16 Bug fixes
+ 17 Bug fixes
   8 Localisation updates
 ----------------------------------------------------------------------
 6.0.1 vs 6.0.0
@@ -69,6 +69,9 @@
 
   - Error when trying to backup the project file on Windows
   https://sourceforge.net/p/omegat/bugs/1166/
+
+  - Translation memories are not correctly reloaded after team synchronization
+  https://sourceforge.net/p/omegat/bugs/1164/
 
   - Backup file does not created in no-team project
   https://sourceforge.net/p/omegat/bugs/1159/
